added getFilters API
